--- a/MIST143_Traveler/Views/Shopping/PayCheckout.cshtml
+++ b/MIST143_Traveler/Views/Shopping/PayCheckout.cshtml
@@ -31,9 +31,9 @@
 </nav>
 <!-- 複製到這邊，下面article刪掉測試用內容，寫入自己的html。注意class名稱不要汙染到全域的html標籤 -->
 <article class="payContainer">
-    <form method="post" action="PayEnd">
+    <form method="post" action="PayEnd" id="payType">
         <input type="hidden" name="TravelProductId" value="@Model.產品會員.FirstOrDefault().TravelProductId" />
-        <input type="hidden" name="PaymethodId" value="4" />
+        <input type="hidden" name="PaymethodId" value="1" />
         <div class="payContainerInner">
             <div>
                 <div class="row">
@@ -46,7 +46,7 @@
                                 <div class="payTypeRow">
                                     <div class="form-check">
                                         <input class="form-check-input" type="radio" name="flexRadioDefault"
-                                               id="flexRadioDefault1">
+                                               id="flexRadioDefault1" value="1" checked>
                                         <label class="form-check-label" for="flexRadioDefault1">
                                             超商付款／銀行轉帳
                                         </label>
@@ -59,7 +59,7 @@
                                 <div class="payTypeRow">
                                     <div class="form-check">
                                         <input class="form-check-input" type="radio" name="flexRadioDefault"
-                                               id="flexRadioDefault2">
+                                               id="flexRadioDefault2" value="2">
                                         <label class="form-check-label" for="flexRadioDefault2">
                                             街口支付
                                         </label>
@@ -72,7 +72,7 @@
                                 <div class="payTypeRow">
                                     <div class="form-check">
                                         <input class="form-check-input" type="radio" name="flexRadioDefault"
-                                               id="flexRadioDefault2">
+                                               id="flexRadioDefault3"  value="3" >
                                         <label class="form-check-label" for="flexRadioDefault2">
                                             LINE Pay
                                         </label>
@@ -85,7 +85,7 @@
                                 <div class="payTypeRow">
                                     <div class="form-check">
                                         <input class="form-check-input" type="radio" name="flexRadioDefault"
-                                               id="creditCardRadio">
+                                               id="creditCardRadio" value="4">
                                         <label class="form-check-label" for="creditCardRadio">
                                             信用卡
                                         </label>
@@ -151,7 +151,7 @@
                                 <div class="left">點擊「確認付款方式」即表示確認訂單與右方總金額無誤，且同意<a>平台服務條款</a>、<a>退改政策</a></div>
                                 <div class="right">
                                     <div class="mainTitle">NT$ @TotalPrice.ToString("###,###,##0")</div>
-                                    <input type="submit" class="btn btn-main" value="確認付款" @*data-bs-toggle="modal" data-bs-target="#joinModal"*@ />
+                                    <input type="submit" class="btn btn-main" value="確認付款" id="clickPayBtn" @*data-bs-toggle="modal" data-bs-target="#joinModal"*@ />
                                     @*<button type="button" class="btn btn-main" data-bs-toggle="modal" data-bs-target="#joinModal">確認付款</button>*@
                                 </div>
                             </div>
